--- a/projects.html
+++ b/projects.html
@@ -43,16 +43,16 @@
         <div class= "news-text">
         <p>News media are a key source of information for society. How is this source of information produced and how is it consumed? Are news outlets biased? Do readers prefer ideologically biased content?</p>
 
-        <p>In a <a target=_blank a href="https://academic.oup.com/poq/article/80/S1/250/2223443">recent work</a>, we examined issue filtering and ideological framing in U.S. news media. Through the use
+        <p>In a <a target="_blank" href="https://academic.oup.com/poq/article/80/S1/250/2223443">recent work</a>, we examined issue filtering and ideological framing in U.S. news media. Through the use
           of supervised learning and crowdsourcing techniques, we constructed a representative sample of politically
           relevant news coverage with ideological position broken down by issue. Our technique not only provides
           an unbiased ordering of outlets according to their political slant, but also discovers how ideological
           filtering and framing contribute to the overall ideological position. We are currently extending this work to examine how
           ideological bias on news outlets change over time in comparison to public opinion polls.</p>
 
-          <p> The spread of fake news online is raising serious concerns. We are working on a number of projects to model and quantify such behavior. One example is <a target=_blank a href="files/fakenews.pdf">here</a>. In this paper, we examined the spread of fake news leading up to the 2016 U.S. Presidential elections.</p>
+          <p> The spread of fake news online is raising serious concerns. We are working on a number of projects to model and quantify such behavior. One example is <a target="_blank" href="files/fakenews.pdf">here</a>. In this paper, we examined the spread of fake news leading up to the 2016 U.S. Presidential elections.</p>
 
-          <p>In an upcoming <a target=_blank a href="https://www.brookings.edu/book/words-that-matter/">book project</a>, we examine how the news media covered the extraordinary 2016 election, how people reacted to it on social media platforms, and what stuck with the voters. This book is scheduled to be released January 2020.</p>
+          <p>In an upcoming <a target="_blank" href="https://www.brookings.edu/book/words-that-matter/">book project</a>, we examine how the news media covered the extraordinary 2016 election, how people reacted to it on social media platforms, and what stuck with the voters. This book is scheduled to be released January 2020.</p>
         </div>
 
           <h3 id="movements">Social Movements &amp; Media</h3>
@@ -81,8 +81,8 @@
 
               <p>
               Examples studies: In
-              <a target=_blank a href="publications.html">our recent work</a> we introduced a new methodology for quantifying how a movement changes the attitudes and behavior of its participants. In <a target=_blank a href="files/ICWSM2016.pdf">another recent paper</a>, we investigated the value of slacktivists for social movements.
-              We are currently working on determining the value of Social Movement Organizations(SMOs) in online protest movements (a working paper is available <a target=_blank a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3068546">here</a>), measuring stickiness of activism and identifying the most (and least) successful recruitment methods.
+              <a target="_blank" href="publications.html">our recent work</a> we introduced a new methodology for quantifying how a movement changes the attitudes and behavior of its participants. In <a target="_blank" href="files/ICWSM2016.pdf">another recent paper</a>, we investigated the value of slacktivists for social movements.
+              We are currently working on determining the value of Social Movement Organizations(SMOs) in online protest movements (a working paper is available <a target="_blank" href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3068546">here</a>), measuring stickiness of activism and identifying the most (and least) successful recruitment methods.
               We are also working on new mathematical models of collective action that incorporate the new findings from our data-driven studies.
           </p>
         </div>
@@ -101,15 +101,15 @@
 
               <p>
               Understanding Diffusion: Most research on modeling diffusion focuses solely on the influence of friends and assumes that users are either unaware of or not interested in activity happening outside their ego network. Our work challenges this unrealistic assumption.
-              <a target=_blank a href="http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=6413909">Our approach</a> produced a cross-models, cross-networks and cross-metrics evaluation framework which
+              <a target="_blank" href="http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=6413909">Our approach</a> produced a cross-models, cross-networks and cross-metrics evaluation framework which
               takes a strong first step towards attaining reproducibility and testing generalizability in modeling social behavior.
               </p>
 
           <p>Managing Diffusion: The open nature of online social networks leaves their users vulnerable to the spread of misinformation with possibly devastating implications. Clearly, it is vital to investigate effective methods to limit the spread of misinformation to avoid such societal effects. <a target=_blank a href="http://dl.acm.org/authorize?405373">Our work was</a> the first study to focus on optimally managing the spread of misinformation in online social networks.
           </p>
 
-          <p>Reporting Diffusion: Information trends in online social networks reveal societal needs, fears or interests. They can also help users stay on top of news without having to sift through vast amounts of shared information. We introduced a number of methods (<a target=_blank a href="files/examplestudy1.pdf">example study 1</a>,
-          <a target=_blank a href="files/examplestudy2.pdf">example study 2</a>) that improve the state-of-the-art in this area.
+          <p>Reporting Diffusion: Information trends in online social networks reveal societal needs, fears or interests. They can also help users stay on top of news without having to sift through vast amounts of shared information. We introduced a number of methods (<a target="_blank" href="files/examplestudy1.pdf">example study 1</a>,
+          <a target="_blank" href="files/examplestudy2.pdf">example study 2</a>) that improve the state-of-the-art in this area.
           </p>
 
           <p>Group Dynamics: In Bowling Alone: The Collapse and Revival of American Community, Robert D. Putnam discusses how we are fast becoming disconnected from family, friends, and our democratic structures. Online groups present a possible remedy here. But most online groups are short-lived given their inability to sustain members. So, what makes people stick? Can we predict it? For more, <a target=_blank a href="http://dl.acm.org/citation.cfm?id=2488404">go here</a>.
@@ -124,7 +124,7 @@
 
           <div class=diss-text>
 
-          <p>The National Science Foundation has funded our collaborative research project, <a target=_blank a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1717965">Measuring and Promoting the Quality of Online News Discussions?</a>. The project is a joint effort between researchers at the University of Michigan School of Information (<a target=_blank a href="http://presnick.people.si.umich.edu/">Paul Resnick</a>) and the Ohio State University School of Communication (<a target=_blank a href="http://rkellygarrett.com/">R. Kelly Garrett</a>).</p>
+          <p>The National Science Foundation has funded our collaborative research project, <a target="_blank" href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1717965">Measuring and Promoting the Quality of Online News Discussions?</a>. The project is a joint effort between researchers at the University of Michigan School of Information (<a target="_blank" href="http://presnick.people.si.umich.edu/">Paul Resnick</a>) and the Ohio State University School of Communication (<a target="_blank" href="http://rkellygarrett.com/">R. Kelly Garrett</a>).</p>
 
           <p> This project will amplify the efforts of people to bring out the best in other people in online conversations, and will make it easier for people to find high quality online conversations. The first goal of the research is to create automated classifiers to measure the quality of everyday online political talk. Classifiers will estimate the quality of online conversations about news articles in public venues such as Twitter, Facebook, Reddit, and the comments sections of news pages. A Conversation Finder tool (a website and a browser extension) will use the automated classifiers to recommend, in real time, venues where particular news articles are being discussed and where the quality scores are high. The second goal of the research is to create a Conversation Coach that helps the general public to improve the quality of conversation spaces they participate in, by helping them craft messages that directly contribute to quality and that indirectly inspire others. It will include a Message Assistant that extracts elements from conversations in order to help people craft messages and a Message Impact Assessor that predicts the likely impact of a draft message on the quality metrics for subsequent conversations.</p>
 
@@ -133,7 +133,7 @@
           engage in constructive discussion, and can adversely affect readers' understanding of the news.
           This has led a number of news organizations in the US to shut down their commenting sites, while others, such as The Guardian, have sought to improve online comments. In 2012 the news
           organization introduced single-level threading to its commenting system, providing a unique
-          opportunity to examine the influence of that design feature. In a <a target=_blank a href="files/threading.pdf">recent paper</a>, we studied this naturally occurring experiment to investigate the impact of conversation threading on user retention as
+          opportunity to examine the influence of that design feature. In a <a target="_blank" href="files/threading.pdf">recent paper</a>, we studied this naturally occurring experiment to investigate the impact of conversation threading on user retention as
           mediated by several potential changes in conversation structure and style and provided an array of recommendations for designers of news commenting sites. </p>
 
         </div>
@@ -160,7 +160,7 @@
           there are no reasonable alternatives for that particular cause with a lower overhead?
           And how much money could donors collectively save if charities were to go through a recommendation system
           that identified and presented reasonable alternatives in an algorithmic way?
-          For more, <a target=_blank a href="files/ICWSM2016.pdf">read here</a>.</p>
+          For more, <a target="_blank" href="files/ICWSM2016.pdf">read here</a>.</p>
 
           <p>Let's think of another question: Why do people care about the causes that they do? Does exposure increase interest?
           We are currently working on this problem in the context of poverty and homelessness. Stay tuned for our results...</p>
